[gd_scene load_steps=7 format=3 uid="uid://cmpwswik14i1i"]

[ext_resource type="Script" path="res://prog_82a.gd" id="1_27hf1"]
[ext_resource type="Theme" uid="uid://cdsoq1v018kq4" path="res://Big_Font.tres" id="2_5echn"]

[sub_resource type="LabelSettings" id="LabelSettings_eph64"]
line_spacing = 38.0
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_5qnof"]
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_fv3e5"]
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_jils4"]
font_size = 38

[node name="Prog_82a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_27hf1")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 133.0
offset_top = 35.0
offset_right = 483.0
offset_bottom = 121.0
theme = ExtResource("2_5echn")
text = "Speed Limit:
"
label_settings = SubResource("LabelSettings_eph64")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 149.0
offset_right = 414.0
offset_bottom = 235.0
text = "Vehichle Speed:"
label_settings = SubResource("LabelSettings_5qnof")

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 259.0
offset_top = 350.0
offset_right = 443.0
offset_bottom = 436.0
text = "Fine: $"
label_settings = SubResource("LabelSettings_fv3e5")

[node name="TxtLimit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 391.0
offset_top = 40.0
offset_right = 518.0
offset_bottom = 92.0

[node name="TxtSpeed" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 393.0
offset_top = 157.0
offset_right = 520.0
offset_bottom = 209.0

[node name="BtnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 630.0
offset_top = 24.0
offset_right = 862.0
offset_bottom = 137.0
theme = ExtResource("2_5echn")
text = "Calculate"

[node name="BtnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 625.0
offset_top = 179.0
offset_right = 857.0
offset_bottom = 292.0
theme = ExtResource("2_5echn")
text = "Clear"

[node name="BtnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 621.0
offset_top = 326.0
offset_right = 853.0
offset_bottom = 439.0
theme = ExtResource("2_5echn")
text = "Exit"

[node name="LblFine" type="Label" parent="."]
layout_mode = 0
offset_left = 395.0
offset_top = 350.0
offset_right = 487.0
offset_bottom = 409.0
label_settings = SubResource("LabelSettings_jils4")

[connection signal="pressed" from="BtnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="BtnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="BtnExit" to="." method="_on_btn_exit_pressed"]
